k8s/librespeed/librespeed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: librespeed
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: librespeed
  name: librespeed
  namespace: librespeed
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: librespeed
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: librespeed
  name: librespeed
  namespace: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      service: librespeed
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: librespeed
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - env:
            - name: TZ
              value: UTC
          image: lscr.io/linuxserver/librespeed:5.4.1
          name: librespeed
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    service: librespeed
  name: librespeed
  namespace: librespeed
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: librespeed.wayl.one
      http:
        paths:
          - backend:
              service:
                name: librespeed
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: speed.wayl.one
      http:
        paths:
          - backend:
              service:
                name: librespeed
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - librespeed.wayl.one
        - speed.wayl.one
      secretName: librespeed-cert-tls
status:
  loadBalancer: {}
